Kubernetes/apaf-registry-service.yml
apiVersion: v1
kind: Service
metadata:
   name: apaf-registry
   namespace: apaf
spec:
   ports:
      - protocol: TCP
        port: 5010
        targetPort: 5010
        
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: apaf-registry-slice
  namespace: apaf
  labels:
    kubernetes.io/service-name: apaf-registry
addressType: IPv4
ports:
  - name: ''
    appProtocol: http
    protocol: TCP
    port: 5010
endpoints:
  - addresses:
      - "192.168.2.2"
