Kubernetes/apaf-service.yml
apiVersion: v1
kind: Service
metadata:
   name: virtual-apaf
spec:
   type: NodePort
   selector:
      app: apaf
   ports:
      - protocol: TCP
        nodePort: 30000
        port: 9080
        targetPort: 9080
