Kubernetes/couch-service.yml
apiVersion: v1
kind: Service
metadata:
   name: virtual-couch
spec:
   selector:
      app: couchdb
   ports:
      - protocol: TCP
        port: 5984
        targetPort: 5984
