Kubernetes/apaf-ha-deployment.yml
apiVersion: v1
kind: Namespace
metadata:
  name: apaf
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/enforce-version: v1.29

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apaf-deployment
  namespace: apaf
  labels:
    app: apaf
spec:
  replicas: 2
  selector:
    matchLabels:
      app: apaf
  template:
    metadata:
      labels:
        app: apaf
    spec:
      volumes:
      - name: workspace-storage
        persistentVolumeClaim:
          claimName: workspace-claim
      containers:
      - name: apaf
        image: 192.168.2.218:5000/apaf:1.6
        ports:
        - containerPort: 9080
          name: apaf-web-port
        volumeMounts:
        - mountPath: "/opt/workspace"
          name: workspace-storage
---
apiVersion: v1
kind: Service
metadata:
   name: apaf-lb
   namespace: apaf
spec:
   type: ClusterIP
   selector:
      app: apaf
   ports:
      - protocol: TCP
        port: 80
        targetPort: 9080
   externalIPs:
     - 192.168.2.218
     
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apaf-ingress
  namespace: apaf
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: apaf-lb
            port:
              number: 80

---
apiVersion: v1
kind: Service
metadata:
   name: apaf-registry
   namespace: apaf
spec:
  ports:
      - protocol: TCP
        port: 5010
        targetPort: 5010
        
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: apaf-registry-slice
  namespace: apaf
  labels:
    kubernetes.io/service-name: apaf-registry
addressType: IPv4
ports:
  - name: ''
    appProtocol: http
    protocol: TCP
    port: 5010
endpoints:
  - addresses:
      - "192.168.2.2"
