Kubernetes/apaf-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apaf-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: apaf-lb
            port:
              number: 80
